<?xml version="1.0"?>
<package format="3">
  <name>point_lio_unilidar_ros2</name>
  <version>0.0.1</version>
  <description>
    ROS2 version of point_lio_unilidar (LiDAR-inertial odometry based on Point-LIO)
  </description>

  <maintainer email="adaisuke716@gmail.com">Lingbo Meng</maintainer>
  <license>BSD</license>

  <!-- ===== ROS2 build system ===== -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ===== Build dependencies ===== -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <!-- ===== Run dependencies ===== -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
